aligned with android after fixing the rawhits error when uploading drill

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,9 +3,9 @@
 
 <ion-content *ngIf="showRegular" color="light">
     <ion-refresher slot="fixed" disabled="false" (ionRefresh)="doRefresh($event)" pullFactor="0.5" pullMin="100"
-        pullMax="200">
+                   pullMax="200">
         <ion-refresher-content pullingIcon="arrow-down" pullingText="Pull to refresh" refreshingSpinner="bubbles"
-            refreshingText="Refreshing....."></ion-refresher-content>
+                               refreshingText="Refreshing....."></ion-refresher-content>
     </ion-refresher>
 
 
@@ -17,11 +17,11 @@
             <div class="menu">
 
                 <button [class.menuBtniOs]="this.isIos()" class="menuBtn" mat-button [matMenuTriggerFor]="menu"
-                    style="">
+                        style="">
                     <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
-                            d="M18.3058 30.9168H12.6942C12.3426 30.9169 12.0015 30.7968 11.7275 30.5764C11.4536 30.356 11.2632 30.0485 11.188 29.7051L10.5605 26.8006C9.72347 26.4338 8.92978 25.9752 8.19404 25.4331L5.362 26.335C5.02678 26.4419 4.66509 26.4309 4.33698 26.3039C4.00886 26.1768 3.73408 25.9414 3.55825 25.6366L0.74625 20.7788C0.572266 20.4738 0.506956 20.1187 0.561007 19.7717C0.615058 19.4247 0.785268 19.1064 1.04379 18.8687L3.24067 16.8645C3.14076 15.9567 3.14076 15.0406 3.24067 14.1327L1.04379 12.1332C0.784902 11.8954 0.61446 11.5767 0.5604 11.2294C0.506341 10.8821 0.571871 10.5267 0.74625 10.2215L3.55208 5.36062C3.72791 5.05586 4.0027 4.82041 4.33081 4.69337C4.65892 4.56633 5.02062 4.55535 5.35583 4.66225L8.18788 5.56412C8.56404 5.28662 8.95563 5.02762 9.35954 4.79329C9.74958 4.57437 10.1504 4.3755 10.5605 4.1982L11.1895 1.29679C11.2644 0.953301 11.4544 0.645723 11.7281 0.42505C12.0017 0.204378 12.3426 0.083866 12.6942 0.0834961H18.3058C18.6574 0.083866 18.9983 0.204378 19.2719 0.42505C19.5456 0.645723 19.7356 0.953301 19.8105 1.29679L20.4457 4.19975C20.8773 4.39091 21.2998 4.6052 21.7083 4.84416C22.0891 5.06462 22.4575 5.30666 22.8121 5.5672L25.6457 4.66533C25.9807 4.55883 26.3421 4.57001 26.6698 4.69703C26.9976 4.82405 27.2722 5.05927 27.4479 5.36371L30.2538 10.2246C30.6114 10.852 30.4881 11.646 29.9562 12.1347L27.7593 14.1389C27.8592 15.0467 27.8592 15.9628 27.7593 16.8707L29.9562 18.8749C30.4881 19.3651 30.6114 20.1575 30.2538 20.785L27.4479 25.6459C27.2721 25.9506 26.9973 26.1861 26.6692 26.3131C26.3411 26.4402 25.9794 26.4511 25.6442 26.3442L22.8121 25.4424C22.077 25.984 21.2838 26.4422 20.4472 26.8083L19.8105 29.7051C19.7353 30.0483 19.5452 30.3555 19.2715 30.5759C18.9979 30.7962 18.6572 30.9165 18.3058 30.9168ZM15.4938 9.3335C13.8583 9.3335 12.2898 9.9832 11.1333 11.1397C9.97687 12.2961 9.32717 13.8647 9.32717 15.5002C9.32717 17.1357 9.97687 18.7042 11.1333 19.8607C12.2898 21.0171 13.8583 21.6668 15.4938 21.6668C17.1293 21.6668 18.6979 21.0171 19.8543 19.8607C21.0108 18.7042 21.6605 17.1357 21.6605 15.5002C21.6605 13.8647 21.0108 12.2961 19.8543 11.1397C18.6979 9.9832 17.1293 9.3335 15.4938 9.3335Z"
-                            fill="white" />
+                                d="M18.3058 30.9168H12.6942C12.3426 30.9169 12.0015 30.7968 11.7275 30.5764C11.4536 30.356 11.2632 30.0485 11.188 29.7051L10.5605 26.8006C9.72347 26.4338 8.92978 25.9752 8.19404 25.4331L5.362 26.335C5.02678 26.4419 4.66509 26.4309 4.33698 26.3039C4.00886 26.1768 3.73408 25.9414 3.55825 25.6366L0.74625 20.7788C0.572266 20.4738 0.506956 20.1187 0.561007 19.7717C0.615058 19.4247 0.785268 19.1064 1.04379 18.8687L3.24067 16.8645C3.14076 15.9567 3.14076 15.0406 3.24067 14.1327L1.04379 12.1332C0.784902 11.8954 0.61446 11.5767 0.5604 11.2294C0.506341 10.8821 0.571871 10.5267 0.74625 10.2215L3.55208 5.36062C3.72791 5.05586 4.0027 4.82041 4.33081 4.69337C4.65892 4.56633 5.02062 4.55535 5.35583 4.66225L8.18788 5.56412C8.56404 5.28662 8.95563 5.02762 9.35954 4.79329C9.74958 4.57437 10.1504 4.3755 10.5605 4.1982L11.1895 1.29679C11.2644 0.953301 11.4544 0.645723 11.7281 0.42505C12.0017 0.204378 12.3426 0.083866 12.6942 0.0834961H18.3058C18.6574 0.083866 18.9983 0.204378 19.2719 0.42505C19.5456 0.645723 19.7356 0.953301 19.8105 1.29679L20.4457 4.19975C20.8773 4.39091 21.2998 4.6052 21.7083 4.84416C22.0891 5.06462 22.4575 5.30666 22.8121 5.5672L25.6457 4.66533C25.9807 4.55883 26.3421 4.57001 26.6698 4.69703C26.9976 4.82405 27.2722 5.05927 27.4479 5.36371L30.2538 10.2246C30.6114 10.852 30.4881 11.646 29.9562 12.1347L27.7593 14.1389C27.8592 15.0467 27.8592 15.9628 27.7593 16.8707L29.9562 18.8749C30.4881 19.3651 30.6114 20.1575 30.2538 20.785L27.4479 25.6459C27.2721 25.9506 26.9973 26.1861 26.6692 26.3131C26.3411 26.4402 25.9794 26.4511 25.6442 26.3442L22.8121 25.4424C22.077 25.984 21.2838 26.4422 20.4472 26.8083L19.8105 29.7051C19.7353 30.0483 19.5452 30.3555 19.2715 30.5759C18.9979 30.7962 18.6572 30.9165 18.3058 30.9168ZM15.4938 9.3335C13.8583 9.3335 12.2898 9.9832 11.1333 11.1397C9.97687 12.2961 9.32717 13.8647 9.32717 15.5002C9.32717 17.1357 9.97687 18.7042 11.1333 19.8607C12.2898 21.0171 13.8583 21.6668 15.4938 21.6668C17.1293 21.6668 18.6979 21.0171 19.8543 19.8607C21.0108 18.7042 21.6605 17.1357 21.6605 15.5002C21.6605 13.8647 21.0108 12.2961 19.8543 11.1397C18.6979 9.9832 17.1293 9.3335 15.4938 9.3335Z"
+                                fill="white" />
                     </svg>
                 </button>
 
@@ -32,16 +32,15 @@
                     <button mat-menu-item (click)="onDiscconectTarget()">Disconnect Target</button>
                     <button mat-menu-item (click)="openSubModal()">Subscription</button>
                     <button mat-menu-item (click)="onLogout()">Logout</button>
-                    <button mat-menu-item>Version 1.1.3</button>
+                    <button mat-menu-item>Version 1.1.6</button>
                 </mat-menu>
             </div>
 
             <div class="profile">
                 <div class="avatar" *ngIf="profile.img">
                     <img *ngIf="profile.img" [src]="profile.img">
-                    <img *ngIf="!profile.img" src="../../assets/avatar.jpg" />
                     <svg width="146" class="shape" height="25" viewBox="0 0 146 25" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
+                         xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0H145.814L131.233 24.22H14.5814L0 0Z" fill="#FC5151" />
                         <text x="45" y="18">Beginner</text>
                     </svg>
@@ -49,7 +48,7 @@
                 <div class="avatar" *ngIf="!profile.img">
                     <img src="assets/avatar.jpg">
                     <svg class="shape" width="146" height="25" viewBox="0 0 146 25" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
+                         xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0H145.814L131.233 24.22H14.5814L0 0Z" fill="#FC5151" />
                         <text x="45" y="18">Beginner</text>
                     </svg>
@@ -69,13 +68,14 @@
             </div>
         </div>
 
-        <ng-container *ngIf="mySubscription">
-            <div class="d-flex align-item-center justify-content-center">
-                <ion-icon name="star" style="color: #FCE651;"></ion-icon>
-                <div style="color:white;">{{mySubscription.title ? mySubscription.title: mySubscription.type}}
-                    Subscription</div>
-            </div>
-        </ng-container>
+        <!--        <ng-container *ngIf="mySubscription">-->
+        <!--            <div class="d-flex align-item-center justify-content-center">-->
+        <!--                <ion-icon name="star" style="color: #FCE651;"></ion-icon>-->
+        <!--                <div style="color:white;">{{mySubscription.title ? mySubscription.title: mySubscription.type}}-->
+        <!--                    Subscription</div>-->
+        <!--            </div>-->
+        <!--        </ng-container>-->
+
 
 
         <!--        <div *ngIf="!isNotTrainedYet" class="slides">-->
@@ -304,14 +304,14 @@
                             <g id="Group_931" data-name="Group 931">
                                 <g id="Group_930" data-name="Group 930">
                                     <path id="Path_16906" data-name="Path 16906" class="cls-1"
-                                        d="M6.86,5.71a1.91,1.91,0,0,0,2.71,0h0l1.95-2a.66.66,0,0,0,.05-.91.64.64,0,0,0-.9,0l-.06.06L8.83,4.65v-4A.65.65,0,0,0,8.16,0a.63.63,0,0,0-.61.62V4.59L5.79,2.84a.64.64,0,0,0-.9.91Z"
-                                        transform="translate(-0.03 -0.03)" />
+                                          d="M6.86,5.71a1.91,1.91,0,0,0,2.71,0h0l1.95-2a.66.66,0,0,0,.05-.91.64.64,0,0,0-.9,0l-.06.06L8.83,4.65v-4A.65.65,0,0,0,8.16,0a.63.63,0,0,0-.61.62V4.59L5.79,2.84a.64.64,0,0,0-.9.91Z"
+                                          transform="translate(-0.03 -0.03)" />
                                     <path id="Path_16907" data-name="Path 16907" class="cls-1"
-                                        d="M9.57,10.67a1.91,1.91,0,0,0-2.71,0l-2,2a.64.64,0,0,0-.07.9.65.65,0,0,0,.91.07l.06-.07,1.75-1.75v4a.64.64,0,0,0,.62.66.64.64,0,0,0,.66-.61v-4l1.79,1.79a.63.63,0,0,0,.9.06.64.64,0,0,0,.06-.9l-.05-.06Z"
-                                        transform="translate(-0.03 -0.03)" />
+                                          d="M9.57,10.67a1.91,1.91,0,0,0-2.71,0l-2,2a.64.64,0,0,0-.07.9.65.65,0,0,0,.91.07l.06-.07,1.75-1.75v4a.64.64,0,0,0,.62.66.64.64,0,0,0,.66-.61v-4l1.79,1.79a.63.63,0,0,0,.9.06.64.64,0,0,0,.06-.9l-.05-.06Z"
+                                          transform="translate(-0.03 -0.03)" />
                                     <path id="Path_16908" data-name="Path 16908" class="cls-1"
-                                        d="M15.73,7.58H.64a.64.64,0,0,0,0,1.28h15.1a.64.64,0,0,0,0-1.28Z"
-                                        transform="translate(-0.03 -0.03)" />
+                                          d="M15.73,7.58H.64a.64.64,0,0,0,0,1.28h15.1a.64.64,0,0,0,0-1.28Z"
+                                          transform="translate(-0.03 -0.03)" />
                                 </g>
                             </g>
                         </svg>
@@ -322,8 +322,8 @@
                         <p>AVG Split</p>
                         <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 11.985 12.002">
                             <path id="_005-split" fill="#FCE651"
-                                d="M11.985 2.209L9.776 0 7.567 2.209l.663.663 1.078-1.078v1.89a2.354 2.354 0 0 1-.808 1.78L6.66 7.055a3.355 3.355 0 0 0-.671.795 3.2 3.2 0 0 0-.659-.79l-1.84-1.6a2.354 2.354 0 0 1-.813-1.78V1.794l1.078 1.078.663-.663L2.209 0 0 2.209l.663.663L1.74 1.794v1.89a3.291 3.291 0 0 0 1.136 2.488l1.84 1.595a2.346 2.346 0 0 1 .8 1.77V12h.937V9.542a2.36 2.36 0 0 1 .824-1.78l1.832-1.59a3.291 3.291 0 0 0 1.136-2.488v-1.89l1.078 1.078zm0 0"
-                                data-name="005-split" />
+                                  d="M11.985 2.209L9.776 0 7.567 2.209l.663.663 1.078-1.078v1.89a2.354 2.354 0 0 1-.808 1.78L6.66 7.055a3.355 3.355 0 0 0-.671.795 3.2 3.2 0 0 0-.659-.79l-1.84-1.6a2.354 2.354 0 0 1-.813-1.78V1.794l1.078 1.078.663-.663L2.209 0 0 2.209l.663.663L1.74 1.794v1.89a3.291 3.291 0 0 0 1.136 2.488l1.84 1.595a2.346 2.346 0 0 1 .8 1.77V12h.937V9.542a2.36 2.36 0 0 1 .824-1.78l1.832-1.59a3.291 3.291 0 0 0 1.136-2.488v-1.89l1.078 1.078zm0 0"
+                                  data-name="005-split" />
                         </svg>
 
                         <p>{{data.bestScores.avgSplit}}</p>
@@ -332,7 +332,7 @@
                         <!--                        <img class="first" src="assets/icons/first-svgrepo-com.svg">-->
                         <p>Grouping</p>
                         <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 18.01 18.01" width="50" height="50">
+                             viewBox="0 0 18.01 18.01" width="50" height="50">
                             <defs>
                                 <style>
                                     .cls-1 {
@@ -342,8 +342,8 @@
                             </defs>
                             <title>goal</title>
                             <path id="goal" class="cls-1"
-                                d="M16.68,4.3l.87-.87a.52.52,0,0,0-.33-.9L15.6,2.4,15.47.78A.54.54,0,0,0,14.9.29a.52.52,0,0,0-.33.16l-.88.87a9,9,0,1,0,3,3ZM14.59,2.93a.52.52,0,0,0,.48.48l.93.08L14.74,4.75l-1.37-.12-.12-1.37L14.51,2ZM10.79,9A1.8,1.8,0,1,1,9,7.21a1.77,1.77,0,0,1,.84.21L8.63,8.63a.52.52,0,0,0,.74.74l1.21-1.21A1.77,1.77,0,0,1,10.79,9ZM10.6,6.65a2.83,2.83,0,1,0,.75.74l1.5-1.5a4.93,4.93,0,1,1-.74-.75Zm4,8a7.94,7.94,0,0,1-11.46-11l.23-.24a8,8,0,0,1,9.55-1.29l-.6.6a.51.51,0,0,0-.15.36V3.1l.07.84a6,6,0,1,0,1.8,1.81l.84.07h.29l0,0h0l0,0h0s0,0,0,0l.6-.59a8,8,0,0,1-1.3,9.54Z"
-                                transform="translate(0 0)" />
+                                  d="M16.68,4.3l.87-.87a.52.52,0,0,0-.33-.9L15.6,2.4,15.47.78A.54.54,0,0,0,14.9.29a.52.52,0,0,0-.33.16l-.88.87a9,9,0,1,0,3,3ZM14.59,2.93a.52.52,0,0,0,.48.48l.93.08L14.74,4.75l-1.37-.12-.12-1.37L14.51,2ZM10.79,9A1.8,1.8,0,1,1,9,7.21a1.77,1.77,0,0,1,.84.21L8.63,8.63a.52.52,0,0,0,.74.74l1.21-1.21A1.77,1.77,0,0,1,10.79,9ZM10.6,6.65a2.83,2.83,0,1,0,.75.74l1.5-1.5a4.93,4.93,0,1,1-.74-.75Zm4,8a7.94,7.94,0,0,1-11.46-11l.23-.24a8,8,0,0,1,9.55-1.29l-.6.6a.51.51,0,0,0-.15.36V3.1l.07.84a6,6,0,1,0,1.8,1.81l.84.07h.29l0,0h0l0,0h0s0,0,0,0l.6-.59a8,8,0,0,1-1.3,9.54Z"
+                                  transform="translate(0 0)" />
                         </svg>
 
                         <p>{{data.bestScores.grouping}}</p>
@@ -352,8 +352,8 @@
                         <!--                        <img class="first" src="assets/icons/first-svgrepo-com.svg">-->
                         <p>Hit Ratio</p>
                         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50"
-                            height="50" viewBox="0 0 480.543 480.543"
-                            style="enable-background:new 0 0 480.543 480.543;fill:#FCE651" xml:space="preserve">
+                             height="50" viewBox="0 0 480.543 480.543"
+                             style="enable-background:new 0 0 480.543 480.543;fill:#FCE651" xml:space="preserve">
                             <g>
                                 <g>
                                     <path d="M225.278,278.426c0-48.641-39.572-88.213-88.214-88.213c-48.641,0-88.212,39.572-88.212,88.213
@@ -414,7 +414,7 @@
             <div class="history-wrapper" (click)="onActivityClicked()">
                 <span>History</span>
                 <svg version="1.1" id="Capa_1" x="0px" y="0px" width="30" height="30" viewBox="0 0 503.379 503.379"
-                    style="enable-background:new 0 0 503.379 503.379;fill:#FCE651" xml:space="preserve">
+                     style="enable-background:new 0 0 503.379 503.379;fill:#FCE651" xml:space="preserve">
                     <g>
                         <path d="M458.091,128.116v326.842c0,26.698-21.723,48.421-48.422,48.421h-220.92c-26.699,0-48.421-21.723-48.421-48.421V242.439
 		c6.907,1.149,13.953,1.894,21.184,1.894c5.128,0,10.161-0.381,15.132-0.969v211.594c0,6.673,5.429,12.104,12.105,12.104h220.92
