--- a/src/app/shared/authentication/signin/signin.component.scss
+++ b/src/app/shared/authentication/signin/signin.component.scss
@@ -34,7 +34,7 @@ section.login {
     display: flex;
     align-items: center;
     font-size: 27px;
-    margin: 90px auto 70px auto;
+    margin: 30px auto 40px;
     color: white;
     justify-content: center;
     text-align: center;
