--- a/src/app/shared/drill/drill.component.scss
+++ b/src/app/shared/drill/drill.component.scss
@@ -1011,10 +1011,12 @@ div.welcome-message {
 }
 
 .table-from-right {
-  height: 100%;
+  height: 90%;
   position: absolute;
-  background: #101820ff;
   right: 0;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  background: white;
 }
 
 .white {
@@ -1057,4 +1059,150 @@ table{
 
 .table{
   color:white;
+}
+
+div.results-table {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+
+  table {
+    display: block;
+
+    height: calc(100% - 50px);
+    width: 100%;
+    border-radius: 5px;
+
+    direction: rtl;
+
+    thead {
+      width: 100%;
+      display: block;
+      height: 40px;
+
+      tr {
+        display: flex;
+        align-items: center;
+        flex-direction: row-reverse;
+
+        width: 100%;
+        height: 40px;
+        background: #e4e4e4;
+
+        box-sizing: border-box;
+
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+
+        th {
+          color: #e4e4e4;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: calc(100% / 4);
+          box-sizing: border-box;
+          padding: 0 0.5em;
+
+          svg {
+            width: 2.5vw;
+            height: 24px;
+            fill: white;
+          }
+
+          p {
+            margin: 0;
+            font-size: 12px;
+            line-height: 14px;
+            letter-spacing: 0.12px;
+            color: rgba(0, 0, 0, 0.87);
+          }
+        }
+      }
+    }
+
+    tbody {
+      width: 100%;
+      display: block;
+      overflow-y: scroll;
+      height: 160px;
+
+      tr {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        height: 40px;
+        justify-content: space-around;
+        background-color: white;
+        flex-direction: row-reverse;
+
+        box-sizing: border-box;
+        padding: 0 1em;
+
+        &:nth-child(even) {
+          background-color: #e4e4e4;
+        }
+
+        td {
+          width: calc(100% / 4);
+          color: rgba(0, 0, 0, 0.6);
+          font-size: 12px;
+          line-height: 14px;
+          letter-spacing: 0.12px;
+          text-align: left;
+          box-sizing: border-box;
+          padding: 0 0.5em;
+
+        }
+      }
+
+    }
+  }
+
+
+  div.table-sum {
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+    background-color: #262626;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding: 0 1em;
+
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    width: 100%;
+
+    p {
+      width: calc(100% / 4);
+      color: white;
+      font-size: 8px;
+      line-height: 14px;
+      letter-spacing: 0.12px;
+      box-sizing: border-box;
+      padding: 0 0.5em;
+      text-align: left;
+      margin: 0;
+
+    }
+  }
+
+
+  p.flashing-number {
+    font-size: 205px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.17;
+    letter-spacing: 3.42px;
+    text-align: center;
+    color: rgba(206, 86, 75, 0.81);
+    margin: 0;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
